--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <hr />
         <h3>PERSONAL PROFILE</h3>
         <p>
-          An aspiring Software Developer, pursuing a challenging career where my technical and academic experience will add value to the organizational operation, and also further my personal and professional development. I am proficient in graphics and design, blogging, anchoring and research 
+          An aspiring Software Developer, pursuing a challenging career where my technical and academic experience will add value to the organizational operation, and also further my personal and professional development. I am proficient in graphics and design, blogging, anchoring and research. 
         </p>
       </section>
 
