--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 # MyDocuments
 <html>
-    <title>AJAYI TAIWO</title>
- <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>AJAYI TAIWO</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div id="democontainer">
+<img id="demoimage" src="https://imgur.com/23okrnu.jpg" width="153" height="205">
+  <h1>Ajayi Taiwo Aderonke</h1>
+   <strong>PERSONAL PROFILE</strong>
+  <br>
+    
+<ul id="demotext">
+<p>An aspiring Software Developer, pursuing a challenging career where my technical and academic experience will add value to the organizational operation, and also further my personal and professional development. I am proficient in graphics and design, blogging, anchoring and research.</p>
+<br style="clear: both;">
+</div>
+  <hr>
+  
   <div class="vl"></div>
   <div id="wrapper">
   <div class="container">
     <aside id="aside">
       <div class="aside-section">
         <aside id="aside">
-        <div class="avatar">
-           <img src="https://imgur.com/23okrnu.jpg" alt="Taiwo Ajayi">
-</div>
-      </div>
-      <div class="aside-section">
+          </div>
+         <div class="aside-section">
  <h3 class="section-heading">CONTACT</h3>
-<hr />
         <div class="section-content">
           <p><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i> Ijebu - Ode, Ogun, Nigeria</p>
 <p><i class="fa fa-envelope fa-2x" aria-hidden="true"></i> ajayitaiwo662@gmail.com</p>
@@ -55,20 +64,9 @@
       </div>
       <!-- .aside-section -->
     </aside>
-    <main id="main">
+        <main id="main">
       <section class="main-section">
-        <h2>AJAYI TAIWO ADERONKE</h2>
-        <strong>Student</strong>
-        <hr />
-        <h3>PERSONAL PROFILE</h3>
-        <p>
-          An aspiring Software Developer, pursuing a challenging career where my technical and academic experience will add value to the organizational operation, and also further my personal and professional development. I am proficient in graphics and design, blogging, anchoring and research. 
-        </p>
-      </section>
-
-      <section class="main-section">
-        <h3>ACADEMIC QULAFICATIONS</h3>
-        <hr />
+         <h3>ACADEMIC QULAFICATIONS</h3>
         <div class="mb-24">
           <div class="flex-item">
             <h4>Primary school certificate</h4>
@@ -97,6 +95,8 @@
           <p class="font-italic mt-0">Olabisi Onabnajo University, Ago-Iwoye, Ogun State</p>
         </div>
       </section>
+          <br>
+          <br>
 
       <section class="main-section">
         <h3>WORK EXPERIENCE</h3>
@@ -126,22 +126,17 @@
         </div>
            </section>
 </html>
-        <style>
-            .vl {
-  border-left: 5px solid black;
-  height: 678px;
-  position: absolute;
-  left: 37%;
-  margin-left: -38px;
-  top: 286px;
-}
 
+<style>
+    #demoimage {
+  float: left ;
+}
 body {
     padding: 0;
     margin: 0;
     font-size: 1rem;
     font-family: 'sans-serif';
-    background: #eee;
+    background: white;
 }
 
 * {
@@ -163,10 +158,11 @@ body {
 .mb-24 {
     margin-bottom: 24px;
 }
+    padding: 0;
 
 .fine-list {
     margin: 0;
-    padding: 0;
+  padding: 0;
 }
 
 .fine-list li {
@@ -195,7 +191,7 @@ body {
 }
 
 .section-heading {
-    margin-bottom: 14px;
+    margin-bottom: 15px;
     margin-top: 0;
 }
 
@@ -203,19 +199,6 @@ body {
     flex: 240px 0 0;
     background: white;
     color: black;
-}
-
-.avatar {
-    width: 200px;
-    height: 200px;
-    border-radius: 50rem;
-    overflow: hidden;
-    margin: 24px;
-}
-
-.avatar img {
-    width: 100%;
-    height: 100%;
 }
 
 #aside h4 {
@@ -232,7 +215,7 @@ body {
 }
 
 .aside-section {
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 .section-content {
@@ -247,13 +230,12 @@ body {
     border: none;
     background-color: black;
     height: 4px;
-    width: 100%;
 }
 
 #main {
     flex: auto 1 1;
     background: #fff;
-    padding: 0px;
+    padding: 44px;
     padding-top: 48px;
 }
 
@@ -269,8 +251,8 @@ body {
 
 #main p {
     color: black;
-    font-size: 0.944rem;
-    line-height: 1.4;
+    font-size: 0.945rem;
+    line-height: 1.5;
 }
 
 #main ul {
@@ -287,11 +269,13 @@ body {
 #main hr {
     background-color: black;
     border: none;
-    height: 4px;
+    height: 1px;
     margin-bottom: 24px;
     width: 100%;
 }
 .main-section {
-    margin-bottom: 25px;
+    margin-bottom: 50px;
+  margin-top: -50px;
 }
-        </style>
+
+</style>
