--- a/index.html
+++ b/index.html
@@ -129,7 +129,13 @@
 
 <style>
     #demoimage {
-  float: left ;
+  float: left;
+    width: 200px;
+    height: 200px;
+    border-radius: 50rem;
+    overflow: hidden;
+    margin: 24px;
+}
 }
 body {
     padding: 0;
