--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <br>
     
 <ul id="demotext">
-<p>An aspiring Software Developer, pursuing a challenging career where my technical and academic experience will add value to the organizational operation, and also further my personal and professional development. I am proficient in graphics and design, blogging, anchoring and research.</p>
+<p>An aspiring Computer and Information Research Scientist, pursuing a challenging career where my technical and academic experience will add value to the organizational operation, and also further my personal and professional development. I am proficient in graphics and design, blogging, anchoring and research.</p>
 <br style="clear: both;">
 </div>
   <hr>
